force-app/main/default/objects/Submission_Document__c/Submission_Document__c.object-meta.xml
<CustomObject>
    <label>Submission Document</label>
    <pluralLabel>Submission Documents</pluralLabel>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>