force-app/main/default/objects/Submission_Document__c/fields/Data_Cloud_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Document_Id__c</fullName>
    <label>Data Cloud Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>