force-app/main/default/objects/Submission_Document__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <label>File Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>