force-app/main/default/objects/Submission_Document__c/fields/Indexing_Status__c.field-meta.xml
<CustomField>
    <fullName>Indexing_Status__c</fullName>
    <label>Indexing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Indexed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>