force-app/main/default/objects/Submission_Document__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Submission Documents</relationshipLabel>
    <relationshipName>Submission_Documents</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>